# lucy

./: .env.example  .env.local  .gitignore  Makefile  README.md  cli.py  pyproject.toml
app/: config.py  handlers.py  web.py
app/helpers/: llm.py  logger.py  rag.py
app/static/: app.js  index.html  styles.css
cli/: lucy  lucy.py
core/: llm.py  rag.py  util.py
lib/: __init__.py  llm.py  rag.py
lucy/: bot.py  config.py  handlers.py  web.py
